--- a/Splatoon3_rank_simulation_jfx/splatoon3_rank_simulation_jfx/Simulation_result.fxml
+++ b/Splatoon3_rank_simulation_jfx/splatoon3_rank_simulation_jfx/Simulation_result.fxml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</GridPane>
 
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <content>
+            <TextArea fx:id="text_area_result" editable="false" prefHeight="398.0" prefWidth="598.0" text="Test&#10;&#10;TextArea">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextArea>
+         </content>
+      </ScrollPane>
+   </center>
+</BorderPane>
